# LearnOpenGL

./: CMakeLists.txt
include/glad/: glad.h
lib/: glfw3.lib
res/: pack.plist
shader/: base.fs  base.vs  pnt.vs  white.vs
src/: CMakeLists.txt
src/interaction/: CMakeLists.txt  log.h  player.cpp  player.h
src/main/: CMakeLists.txt  main.cpp  render.cpp
src/render/: CMakeLists.txt  frame.cpp  frame.h  glad.c  glmSupport.h  manager.cpp  manager.h  shader.cpp  shader.h  texture.cpp  texture.h  transform.cpp  transform.h  vertex.cpp  vertex.h
src/runtime/: CMakeLists.txt  camera.cpp  camera.h  cube.cpp  cube.h  element.cpp  element.h  light.cpp  light.h  manager.cpp  manager.h  model.cpp  model.h  pipeline.cpp  pipeline.h  scene.cpp  scene.h  trangle.cpp  trangle.h
src/utils/: fileUtils.h
